edit html and css files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container-fluid" id="header1">
 		<div class="container">
 			<div class="row d-flex justify-content-between">
-				<div class="col col-auto">
+				<div class="col col-12 col-lg-auto">
 					<ul>
 						<li><a href="#"><img src="images/icon4.png"><span>Blog</span></a></li>
 						<li><a href="#"><img src="images/icon3.png"><span>Jobs</span></a></li>
@@ -19,7 +19,7 @@
 						<li><a href="#"><img src="images/icon1.png"><span>Arabic</span></a></li>
 					</ul>
 				</div>
-				<div>
+				<div class="col col-12 col-lg-auto">
 					<ul>
 						<li><a href="#"><img src="images/facebook.png"></a></li>
 						<li><a href="#"><img src="images/twitter.png"></a></li>
@@ -31,11 +31,11 @@
 		</div>
 	</div>
 	<header class="container">
-		<div class="row d-flex justify-content-between ">
-			<div class="col col-6">
+		<div class="row d-flex justify-content-center">
+			<div class="col col-auto col-sm-6">
 				<a href="#"><img src="images/logo2.png"></a>
 			</div>
-			<div class="col col-6">
+			<div class="col col-auto col-sm-6">
 				<div class="row">
 					<div class="col">
 						<span>Saudi Arabia, Alreyadah</span>	
@@ -53,20 +53,19 @@
 	</header>
 	<div class="container-fluid" id="header3">
 		<div class="container">
-			<div class="row d-flex justify-content-between ">
+			<div class="row d-flex justify-content-center">
 				<div class="col col-auto">
-					<ul>
-						<li><a href="#"><h3>Home</h3></a></li>
-						<li><a href="#"><h3>What about ISAMA</h3></a></li>
-						<li><a href="#"><h3>What we do ?</h3></a></li>
-						<li><a href="#"><h3>Out Projects</h3></a></li>
-						<li><a href="#"><h3>Exellent Team</h3></a></li>
-						<li><a href="#"><h3>Contact</h3></a></li>
-					</ul>			
+						<ul>
+							<li><a href="#"><h3>Home</h3></a></li>
+							<li><a href="#"><h3>What about ISAMA</h3></a></li>
+							<li><a href="#"><h3>What we do ?</h3></a></li>
+							<li><a href="#"><h3>Out Projects</h3></a></li>
+							<li><a href="#"><h3>Exellent Team</h3></a></li>
+							<li><a href="#"><h3>Contact</h3></a></li>
+						</ul>
 				</div>
 				<div class="col col-auto">	
 					<form>
-					<input type="text" class="input" placeholder="Enter your keyworld">
 					<button type="button"><img src="images/icon-s.png">Type your search words</button>
 					</form>
 				</div>
@@ -75,19 +74,19 @@
 	</div>
 	<div class="container-fluid" id="slide">
 		<div class="container">
-			<div class="row  justify-content-between">
+			<div class="row d-flex justify-content-between">
 				<div class="col col-12">
 					<h2>LET’S DRAW SOME ARTS </h2>
 					<h3>make your business much better</h3>
 				</div>
 			</div>
 			<div class="row d-flex justify-content-end">
-				<div class="col col-3">
+				<div class="col col-md-4 col-lg-3">
 					<div class="row">
 						<a class="col col-12" href="#"><img src="images/tim1.png">Like</a>	
 					</div>
 				</div>
-				<div class="col col-3">
+				<div class="col col-md-4 col-lg-3">
 					<div class="row">
 						<a class="col col-12" href="#"><img src="images/tim2.png">Like</a>	
 					</div>
@@ -98,10 +97,350 @@
 					</form>
 				</div>
 			</div>
-			
 		</div>
-		
 	</div>
+	<div class="container" id="about">
+		<div class="row justify-content-between">
+			<div class="col col-12 col-lg-6">
+				<div class="row">
+					<div class="col col-3">
+						<img src="images/icon001.png">
+					</div>
+					<div class="col col-9">
+						<h3>What about ISAMA</h3>
+						<p>ISAMA is a marketing foundation located in Riyadh built on the talent of creation that leads to a modern concept of professionalism. At ISAMA we believe even if you are good at what you do, you have a great prod-uct or you provide an excellent service. We still can present you a little better to the world, creating your full identity, provides you with your marketing plans, design your website, print your publications, design your logo’s and offices. Simply we give you business the perfect image.</p>
+					</div>
+				</div>
+				
+			</div>
+			<div class="col col-12 col-lg-6">
+				<div class="row">
+					<div class="col col-3">
+						<img src="images/icon002.png">
+					</div>
+					<div class="col col-9">
+						<h3>Why we exist</h3>
+						<p>Reaching customer satisfaction through providing them with cutting-edge technologies that give clients access to a wide range of tools, ensuring efficient and results-oriented communication solutions, which grant them a special character that distinguishes them from the others in the business.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="services">	
+		<div class="row d-flex justify-content-center">	
+			<div class="col col-auto">
+				<img src="images/icon12.png">
+			</div>
+			<div class="col col-auto">
+				<h3>What we do ?</h3>
+				<p>Everything you need to do business intelligence right.</p>
+			</div>
+		</div>
+		<div class="row justify-content-between">
+			<div class="col col-12 col-md-6 col-lg-5">
+				<div class="row">
+					<div class="col col-3 col-md-4 col-lg-3">
+						<img src="images/icon13.png">
+					</div>
+					<div class="col col-9 col-md-8 col-lg-9">
+						<h4>Web Design & Development</h4>
+						<p>ISAMA Pvt. Ltd. Designs and develops creative web-sites utilizing the latest technologies.</p>
+					</div>
+				</div>	
+			</div>
+
+			<div class="col col-12 col-md-6 col-lg-5">
+				<div class="row">
+					<div class="col col-3 col-md-4 col-lg-3">
+						<img src="images/icon19.png">
+					</div>
+					<div class="col col-9 col-md-8 col-lg-9">
+						<h4>Web Design & Development</h4>
+						<p>Our Developers helps you to Design, Devolop & Distrib-ute Mobile Apphlications – smarter & Faster.</p>
+					</div>
+				</div>	
+			</div>	
+		</div>
+		<div class="row justify-content-between">
+			<div class="col col-12 col-md-6 col-lg-5">
+				<div class="row">
+					<div class="col col-3 col-md-4 col-lg-3">
+						<img src="images/icon14.png">
+					</div>
+					<div class="col col-9 col-md-8 col-lg-9">
+						<h4>Web Design & Development</h4>
+						<p>With out software for professional services and con-sulting films. Grow your revenue and profit margins by assigning the right people to the right projects at the right time.</p>
+					</div>
+				</div>	
+			</div>
+
+			<div class="col col-12 col-md-6 col-lg-5">
+				<div class="row">
+					<div class="col col-3 col-md-4 col-lg-3">
+						<img src="images/icon15.png">
+					</div>
+					<div class="col col-9 col-md-8 col-lg-9">
+						<h4>Web Design & Development</h4>
+						<p>We offer a variety of design services ranging from Full Service Interior Design and Styling to our Design Con-cierge service, all of which are executed with beautiful, custom-tailored serults.</p>
+					</div>
+				</div>	
+			</div>	
+		</div>		
+		<div class="row justify-content-between">
+			<div class="col col-12 col-md-6 col-lg-5">
+				<div class="row">
+					<div class="col col-3 col-md-4 col-lg-3">
+						<img src="images/icon16.png">
+					</div>
+					<div class="col col-9 col-md-8 col-lg-9">
+						<h4>Web Design & Development</h4>
+						<p>We have our forte in advertising and Brand establish-ment. We create identities for the clients product and services in the target market.</p>
+					</div>
+				</div>	
+			</div>
+
+			<div class="col col-12 col-md-6 col-lg-5">
+				<div class="row">
+					<div class="col col-3 col-md-4 col-lg-3">
+						<img src="images/icon17.png">
+					</div>
+					<div class="col col-9 col-md-8 col-lg-9">
+						<h4>Web Design & Development</h4>
+						<p>We offer a variety of design services ranging from Full Service Interior Design and Styling to our Design Con-cierge service, all of which are executed with beautiful, custom-tailored serults.</p>
+					</div>
+				</div>	
+			</div>					
+		</div>
+	</div>
+	<div class="container-fluid" id="top-projects">
+		<div class="container">
+		</div>
+	</div>	
+	<div class="container-fluid" id="projects">
+		<div class="container">
+			<div class="row d-flex justify-content-center">
+				<div class="col col-12 col-md-3">
+					<img src="images/icon18.png">
+				</div>
+				<div class="col col-10 col-md-5 col-lg-4">
+					<div>
+						<h3>Our Projects</h3>
+						<p>Some of our awesome work Proud of doing great works for our clients</p>	
+					</div>
+				</div>
+			</div>
+			<div>
+				<ul>
+					<li><button>All</button></li>
+					<li><button>Mobile Apps</button></li>
+					<li><button>Identities</button></li>
+					<li><button>Interior Design</button></li>
+					<li><button>UX/UI</button></li>
+				</ul>
+			</div>
+			<div class="row d-flex justify-content-center projects-item">
+				<div class="col col-9 col-sm-7 col-md-5 col-xl-3 col-lg-4">
+					<div>
+						<div>
+							<img src="images/img.jpg">
+						</div>
+						<div>
+							<img src="images/link.png">
+							<img src="images/more.png">
+						</div>					
+					</div>
+				</div>
+				<div class="col col-9 col-sm-7 col-md-5 col-xl-3 col-lg-4">
+					<div>
+						<div>
+							<img src="images/img1.jpg">
+						</div>
+						<div>
+							<img src="images/link.png">
+							<img src="images/more.png">
+						</div>					
+					</div>
+				</div>
+				<div class="col col-9 col-sm-7 col-md-5 col-xl-3 col-lg-4">
+					<div>
+						<div>
+							<img src="images/img2.jpg">
+						</div>
+						<div>
+							<img src="images/link.png">
+							<img src="images/more.png">
+						</div>					
+					</div>
+				</div>
+				<div class="col col-9 col-sm-7 col-md-5 col-xl-3 col-lg-4">
+					<div>
+						<div>
+							<img src="images/img3.jpg">
+						</div>
+						<div>
+							<img src="images/link.png">
+							<img src="images/more.png">
+						</div>					
+					</div>
+				</div>
+				<div class="col col-9 col-sm-7 col-md-5 col-xl-3 col-lg-4">
+					<div>
+						<div>
+							<img src="images/img4.jpg">
+						</div>
+						<div>
+							<img src="images/link.png">
+							<img src="images/more.png">
+						</div>					
+					</div>
+				</div>
+				<div class="col col-9 col-sm-7 col-md-5 col-xl-3 col-lg-4">
+					<div>
+						<div>
+							<img src="images/img5.jpg">
+						</div>
+						<div>
+							<img src="images/link.png">
+							<img src="images/more.png">
+						</div>					
+					</div>
+				</div>
+				<div class="col col-9 col-sm-7 col-md-5 col-xl-3 col-lg-4">
+					<div>
+						<div>
+							<img src="images/img6.jpg">
+						</div>
+						<div>
+							<img src="images/link.png">
+							<img src="images/more.png">
+						</div>					
+					</div>
+				</div>
+				<div class="col col-9 col-sm-7 col-md-5 col-xl-3 col-lg-4">
+					<div>
+						<div>
+							<img src="images/img3.jpg">
+						</div>
+						<div>
+							<img src="images/link.png">
+							<img src="images/more.png">
+						</div>					
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="team">
+		<div class="row d-flex justify-content-center">
+			<div class="col col-12 col-md-3 col-lg-2">
+				<img src="images/i1.png">
+			</div>
+			<div class="col col-10 col-md-7 col-lg-5">
+				<div>
+					<h3>Meet our team</h3>
+					<p>We have highly qualified staff with distinguished significant experiences in their field who work under pressure.</p>
+				</div>
+			</div>
+		</div>
+		<div class="row d-flex justify-content-center">
+			<div class="col col-9 col-sm-6  col-md-5 col-lg-3">
+				<div>
+					<div>
+						<img src="images/i2.png">
+					</div>
+					<div>
+						<h4>Tamer</h4>
+						<p>Senior Software Engineer</p>
+					</div>
+					<div>
+						<ul>
+							<li><a href="#"><img src="images/facebook1.png"></a></li>
+							<li><a href="#"><img src="images/twitter1.png"></a></li>
+							<li><a href="#"><img src="images/instagram1.png"></a></li>
+							<li><a href="#"><img src="images/linkedin.png"></a></li>
+						</ul>						
+					</div>
+				</div>
+			</div>
+			<div class="col col-9 col-sm-6 col-md-5 col-lg-3">
+				<div>
+					<div>
+						<img src="images/i3.png">
+					</div>
+					<div>
+						<h4>Hamzem</h4>
+						<p>PHP Developer</p>
+					</div>
+					<div>
+						<ul>
+							<li><a href="#"><img src="images/facebook1.png"></a></li>
+							<li><a href="#"><img src="images/twitter1.png"></a></li>
+							<li><a href="#"><img src="images/instagram1.png"></a></li>
+							<li><a href="#"><img src="images/linkedin.png"></a></li>
+						</ul>						
+					</div>
+				</div>
+			</div>
+			<div class="col col-9 col-sm-6 col-md-5 col-lg-3">
+				<div>
+					<div>
+						<img src="images/i4.png">
+					</div>
+					<div>
+						<h4>Mohammed</h4>
+						<p>PHP Developer</p>
+					</div>
+					<div>
+						<ul>
+							<li><a href="#"><img src="images/facebook1.png"></a></li>
+							<li><a href="#"><img src="images/twitter1.png"></a></li>
+							<li><a href="#"><img src="images/instagram1.png"></a></li>
+							<li><a href="#"><img src="images/linkedin.png"></a></li>
+						</ul>						
+					</div>
+				</div>
+			</div>
+			<div class="col col-9 col-sm-6 col-md-5 col-lg-3">
+				<div>
+					<div>
+						<img src="images/img5.png">
+					</div>
+					<div>
+						<h4>Ahmed</h4>
+						<p>UX/UI designer</p>
+					</div>
+					<div>
+						<ul>
+							<li><a href="#"><img src="images/facebook1.png"></a></li>
+							<li><a href="#"><img src="images/twitter1.png"></a></li>
+							<li><a href="#"><img src="images/instagram1.png"></a></li>
+							<li><a href="#"><img src="images/linkedin.png"></a></li>
+						</ul>						
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<footer class="container-fluid">
+		<div class="container">
+			<div class="row d-flex justify-content-center">
+				<div>
+					<span>795 Almaddinah Way</span>	
+					<span>Saudi Arabia . Alreyadah</span>
+				</div>				
+			</div>
+			<div class="row d-flex justify-content-center">
+				<div class="col col-auto">
+					<ul>
+						<li><a href="#"><img src="images/icon02.png"></a></li>
+						<li><a href="#"><img src="images/icon03.png"></a></li>
+						<li><a href="#"><img src="images/icon01.png"></a></li>
+					</ul>
+				</div>
+			</div>
+
+		</div>
+	</footer>
 	<script type="text/javascript" src="bootstrap/jquery-3.5.1.slim.min.js"></script>
 	<script type="text/javascript" src="bootstrap/bootstrap.bundle.min.js"></script>
 </body>
